--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-bootstrap": "^2.10.9",
         "react-dom": "^19.0.0",
         "react-router-dom": "^7.3.0",
+        "react-toastify": "^11.0.5",
         "sass": "^1.86.0"
     },
     "devDependencies": {
