--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "react-bootstrap": "^2.10.9",
         "react-dom": "^19.0.0",
         "react-router-dom": "^7.3.0",
+        "react-slick": "^0.30.3",
         "react-toastify": "^11.0.5",
-        "sass": "^1.86.0"
+        "sass": "^1.86.0",
+        "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
@@ -27,6 +29,7 @@
         "@types/react-bootstrap": "^0.32.37",
         "@types/react-dom": "^19.0.4",
         "@types/react-router-dom": "^5.3.3",
+        "@types/react-slick": "^0.23.13",
         "@vitejs/plugin-react": "^4.3.4",
         "axios": "^1.6.4",
         "eslint": "^9.21.0",
