--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@popperjs/core": "^2.11.8",
         "@types/bootstrap": "^5.2.10",
         "@vitejs/plugin-react": "^4.3.4",
-        "bootstrap": "^5.3.3",
+        "bootstrap": "^5.3.5",
         "bootstrap-icons": "^1.11.3",
         "frontend": "file:",
         "react": "^19.0.0",
@@ -21,7 +22,9 @@
         "react-slick": "^0.30.3",
         "react-toastify": "^11.0.5",
         "sass": "^1.86.0",
-        "slick-carousel": "^1.8.1"
+        "slick-carousel": "^1.8.1",
+        "sweetalert2": "^11.19.1",
+        "sweetalert2-react-content": "^5.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
