--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.8",
         "php-flasher/flasher-laravel": "1.15",
         "php-flasher/flasher-sweetalert-laravel": "1.15",
