--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@vitejs/plugin-react": "^4.3.4",
         "bootstrap": "^5.3.5",
         "bootstrap-icons": "^1.11.3",
+        "dompurify": "^3.2.5",
         "frontend": "file:",
         "react": "^19.0.0",
         "react-bootstrap": "^2.10.9",
